@@ -1,5 +1,10 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2012-08-07 mmichaud <michael.michaud@free.fr>
+  * Fix a bug in AttributeTablePanel : pressing a key starts the cell editing 
+    mode, but it did not clear the selection and kept delete feature action 
+    possible, which was quite dangerous. Now, the selection is cleared. 
+
 2012-07-13 mmichaud <michael.michaud@free.fr>
   * Small NPE fix in MergeSelectedPolygonsWithNeighbourPlugIn
   
